--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="IC"
+
         android:textSize="20sp"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
@@ -54,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignRight="@+id/editText"
         android:layout_alignEnd="@+id/editText"
@@ -74,6 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView4"
         android:layout_alignLeft="@+id/editText2"
         android:layout_alignStart="@+id/editText2"
@@ -96,6 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText4"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignRight="@+id/editText3"
         android:layout_alignEnd="@+id/editText3"
@@ -117,6 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText5"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView6"
         android:layout_alignRight="@+id/editText4"
         android:layout_alignEnd="@+id/editText4"
@@ -138,6 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText6"
+        tools:text="0.0"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignRight="@+id/editText5"
         android:layout_alignEnd="@+id/editText5"
